charts/clusters/base/cert-manager/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: auth-dev
