charts/clusters/base/cert-manager/vault-cluster-issuer.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: auth-dev
