charts/clusters/base/cert-manager/04-platform-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: platform-ui-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: dalaillama-wildcard-tls
      hosts:
        - "dalaillama.dev"
        - "*.dalaillama.dev"

    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - "dalaillama.dev"
        - "*.dalaillama.dev"
